@@ -19,7 +19,7 @@ $EM_CONF[$_EXTKEY] = array(
     'constraints' => array(
         'depends' => array(
             'php' => '5.5.0-7.99.99',
-            'typo3' => '7.6.18-9.3.99',
+            'typo3' => '7.6.18-9.5.99',
         ),
         'conflicts' => array(
         ),
